--- a/src/style/testimonials.css
+++ b/src/style/testimonials.css
@@ -13,7 +13,7 @@ body{
     border-bottom-style: solid;
     border-top-style: none;
     border-right-style: none;
-    background: #F7EBDB;
+    background: #f5f3f1;
     text-align: center;
 }
 .TES_contentContainer h3{
